--- a/css/style.css
+++ b/css/style.css
@@ -18,69 +18,23 @@
     "footer"
 }
 /* HEADER */
-.header{
-    grid-area: header;
-    background-image: linear-gradient(to bottom, rgba(201, 128, 98, 0.89), rgba(83, 56, 48, 0.658));
-}
-
-.header h1{
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.header h1 a{
-    grid-area: titulo;
-    color: rgb(252, 250, 248);  
-    font-size: 100px;  
-    text-decoration: none;
-    padding: 20px;
-    margin: 50px;
-}
-
-.header h1 a:hover{
-    color: black;  
-}
-
 .navBar{
-    grid-area: navBar;
-}
-
-.navBar ul{
     display: flex;
     flex-direction: row;
-    background-color: black;
-    list-style-type: none;
     text-align: center;
     justify-content: space-around;
+    background-color: #F8F9FA;
 }
 
-.navBar ul li{
-    list-style-type: none;
-    align-content: center;
-    width: 100%;  
-}
-
-.navBar ul li a{
-    color: rgb(252, 250, 248);  
-    font-size: 25px;  
-    position: sticky;
-    text-decoration: none;
-    text-align: center; 
-    width: 100%;
-}
-
-.navBar li{
-    width: 100%;
-}
-
-.navBar li:hover{
-    background-color: rgb(252, 250, 248);
-}
-
-.navBar ul li a:hover{
-    color: black;
+.nav-link{
+    padding: 10px;
     font-weight: bold;
+
+}
+
+.nav-link:hover{
+    background-color: rgb(0, 0, 0);
+    color: azure;
 }
 
 /* FOOTER */
@@ -197,7 +151,7 @@
 .destacados{
     display: flex;
     flex-direction: column;
-    background-color: rgb(179, 122, 100);
+    background-image: linear-gradient(to bottom, rgba(201, 128, 98, 0.89), rgba(83, 56, 48, 0.658));
     align-items: center;
     border-radius: 5px;
 }
@@ -249,125 +203,6 @@
 }
 
 
-/* formulario contacto */
-
-.formulario{
-    grid-area: formulario;
-    background-color: rgb(240, 184, 162);
-    display: grid;
-    justify-content: space-around;
-    grid-template-columns: (1);
-    grid-template-areas: 
-    "formulario" 
-}
-
-.cajaForm{
-    display: flex;
-    flex-direction: column;
-    padding: 15px 0px 15px 0px;
-    align-items: center;
-}
-
-.formulario label{
-    display: block;
-    color: antiquewhite;
-    font-size: 25px;
-    font-weight: 400;
-    text-align: center;
-    padding: 5px;
-}
-
-.formulario input{
-    border-width: 1px;
-    border-radius: 20px;
-    background-color: bisque;
-    text-align: center;
-    font-size: 100%;
-    height: 40px;
-    width: 100%;
-    margin: 1rem;
-}
-
-.formulario select{
-    border-width: 2px;
-    border-radius: 25px;
-    background-color: bisque;
-    text-align: center;
-    font-size: 100%;
-    height: 40px;
-    width: 400px;
-}
-
-.formulario label span{
-    display: inline-block;
-    color: antiquewhite;
-    font-size: 25px;
-    text-align: right;
-    font-weight: 400;
-    padding-bottom: 5px;
-}
-
-/* CATÁLOGO */
-
-.catalogo{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(202, 152, 132);
-    align-items: center;
-    border-radius: 5px;
-}
-
-.tituloCatalogo{
-    display: block;
-    padding: 40px;
-    border: 2px;
-    text-align: center;
-    border: 1px;
-    border-color: beige;
-}
-
-.tituloCatalogo h2{
-    border-color: beige
-}
-
-.todosLosProductos{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 80%;
-    padding: 10px;
-}
-
-.producto{
-    grid-area: producto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 0,5rem;
-}
-
-.textoProducto{
-    color: antiquewhite;
-    font-weight: bold;
-    top: 10px;
-    padding:1rem;
-    margin: 1rem;
-    left: 140px;
-    border: solid 2px;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-}
-.main-content-catalogo h2{
-    background-color: rgb(240, 184, 162);
-    padding: 50px;
-    text-align: center;
-}
-
-.main-content-catalogo p{
-    padding: 50px;
-    background-color: rgb(230, 145, 112);
-}
 
 /* DEGUSTACIONES */
 
@@ -427,31 +262,10 @@
     margin: 1rem;
 }
 
-/* NUESTRO EQUIPO */
-
-.main-content-nuestro-equipo h2{
-    background-color: rgb(240, 184, 162);
-    padding: 50px;
-    text-align: center;
-}
-
-.main-content-nuestro-equipo p{
-    padding: 50px;
-    background-color: rgb(230, 145, 112);
-}
 
 /* RESPONSIVE DESIGN - MEDIA QUERY - MOBILE LAST */
 /* TABLET */
 @media (max-width: 768px){
-    /* MENU */
-    .navBar ul{
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    list-style-type: none;
-    text-align: center;
-    justify-content: space-around;
-    }  
 
      /* FOOTER */
     .footer{
@@ -492,13 +306,6 @@
     }
 
 
-    /* CATALOGO */
-
-    .main-content-catalogo{
-        width: 100%;
-    }
-
-
     /* DEGUSTACIONES */
     .degustaciones{    
         display: grid;
@@ -518,11 +325,6 @@
     .cajaForm{
         display: flex;
     }
-    /* NUESTRO EQUIPO */
-    .main-content-nuestro-equipo{
-        width: 100%;
-    }
-
 
 }
 
@@ -557,26 +359,6 @@
         width: 100vw;
         padding-bottom: 10px;
     }
-
-    /* CATALOGO */
-
-    .producto{
-        display: grid;
-        grid-template-columns: 2;
-        grid-template-rows: 2;
-        grid-template-areas: 
-        "producto producto"
-        "producto producto"
-
-    }
-
-    /* CONTACTO */
-    .cajaForm{
-        display: flex;
-    }
-
-
-
 
 
 }
